crates/pardosa-schema/tests/compile_fail/evt_012.stderr
error: EVT-012: GenomeSafe: raw pointers (*const T / *mut T) have no canonical wire representation. Use Box<T>, &T, or an explicit owned value instead.
 --> tests/compile_fail/evt_012.rs:5:8
  |
5 |     p: *const u8,
  |        ^^^^^^^^^

error[E0277]: the trait bound `*const u8: serde::Serialize` is not satisfied
 --> tests/compile_fail/evt_012.rs:3:10
  |
3 | #[derive(Serialize, GenomeSafe)]
  |          ^^^^^^^^^ the trait `Serialize` is not implemented for `*const u8`
4 | struct BadStruct {
5 |     p: *const u8,
  |     - required by a bound introduced by this call
  |
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `*const u8` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
help: the trait `Serialize` is implemented for `u8`
 --> $CARGO/serde_core-$VERSION/src/ser/impls.rs
  |
  |         impl Serialize for $ty {
  |         ^^^^^^^^^^^^^^^^^^^^^^
...
  | primitive_impl!(u8, serialize_u8);
  | --------------------------------- in this macro invocation
note: required by a bound in `_serde::ser::SerializeStruct::serialize_field`
 --> $CARGO/serde_core-$VERSION/src/ser/mod.rs
  |
  |     fn serialize_field<T>(&mut self, key: &'static str, value: &T) -> Result<(), Self::Error>
  |        --------------- required by a bound in this associated function
  |     where
  |         T: ?Sized + Serialize;
  |                     ^^^^^^^^^ required by this bound in `SerializeStruct::serialize_field`
  = note: this error originates in the derive macro `Serialize` which comes from the expansion of the macro `primitive_impl` (in Nightly builds, run with -Z macro-backtrace for more info)
